server-elm-style.css
/* ... */
[ghost-clicked=true] {
    outline: 2px solid var(--context-color);
}

div#context-menu {
    position: absolute;
    display: none;
    background-color: var(--context-color);
    color: white;
    font-weight: bold;
    z-index: 1000000;
}

div#context-menu.visible {
    display: block;
    height: var(--context-menu-height);
    width: 200px;
}

div#context-menu .context-menu-button, div#modify-menu .modify-menu-button, div#modify-menu .modify-menu-icons .context-menu-button {
    background: var(--context-button-color);
    display: inline-block;
    width: var(--context-menu-button-width);
    cursor: pointer;
}

div#context-menu .context-menu-button, div#modify-menu .modify-menu-icons:not(.pinned) .modify-menu-button {
    height: var(--context-menu-height);
}

div#modify-menu .modify-menu-icons.pinned .modify-menu-button {
    border-bottom: 1px solid black;
}

div#modify-menu .modify-menu-icons.pinned .modify-menu-button:last-child {
    border-bottom: none;
}

div#context-menu .context-menu-button.selected, div#modify-menu .modify-menu-button.selected {
    background: var(--context-button-selected);
}

div#modify-menu .modify-menu-button.inert.active {
    background: var(--context-button-color-inert-active)
}

div#modify-menu .modify-menu-button.disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

div#modify-menu .modify-menu-icon-label {
    display: block;
    color: white;
    font-size: calc(var(--context-menu-button-width) / 3);
    text-align: center;
}

div#modify-menu .modify-menu-icon-label-link {
    display: block;
    color: white;
    font-size: calc(var(--context-menu-button-width) / 4);
    text-align: center;
}

div#context-menu .context-menu-button>svg, div#modify-menu .modify-menu-button>svg {
    padding-left: var(--context-menu-padding-left);
    padding-right: var(--context-menu-padding-left);
    padding-top: var(--context-menu-padding-top);
    padding-bottom: var(--context-menu-padding-top);
}

div#context-menu .context-menu-button.inert, div#modify-menu .modify-menu-icons.modify-menu-icons .modify-menu-button.inert {
    background: var(--context-button-color-inert)
}

svg.context-menu-icon>path {
    fill: none;
    stroke: #FFFFFF;
    stroke-width: 2px;
    stroke-linecap: butt;
    -linejoin: miter;
    stroke-opacity: 1;
}

svg.context-menu-icon.fill>path {
    fill: #FFFFFF;
    fill-rule: evenodd;
    stroke-width: 1px;
}

div#context-menu .context-menu-button:hover, div#modify-menu .modify-menu-button:hover:not(.disabled) {
    background: var(--context-button-color-hover);
}

div#context-menu .context-menu-button.inert:hover, div#modify-menu .modify-menu-button.inert:hover:not(.disabled) {
    background: var(--context-button-color-inert-hover)
}

#applyNewTagName {
    display: none;
}

#applyNewTagName.visible {
    display: inline-block;
}

textarea#singleChildNodeContent {
    width: 100%;
    height: 50%;
}

@media (pointer: coarse) {
    div#modify-menu {
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
        /* font-size: 48px; */
        bottom: 0px;
        left: 0px;
        top: initial;
        right: initial;
        height: 40%;
        width: 100%;
        min-height: 350px;
        transform: translate(0px, 100%);
        padding: 0;
        padding-bottom: 80px;
    }
    div#modify-menu>div.modify-menu-icons.pinned {
        width: auto;
        height: var(--context-menu-height);
        position: absolute;
        top: calc(0px - var(--context-menu-height));
        left: 0px;
    }
    div#modify-menu>div.modify-menu-icons.pinned span.modify-menu-icon-label {
        display: none;
    }
    div.bottom-placeholder {
        width: 100%;
        height: 30%;
    }
    :root {
        --context-menu-height: 48px;
        --context-menu-button-width: 48px;
        --context-menu-padding-top: 9px;
        --context-menu-padding-left: 4px;
    }
    /* mobile dom selector */
    div.dom-selector-style {
        height: 45%;
        margin: 0.15em;
        border-radius: 0.4em;
        margin: 2%;
    }
    div.elementAttr {
        display: none;
    }
    div.mainElem {
        margin-bottom: 0;
        height: 40%;
    }
    div.childrenSelector {
        padding: 6px;
        font-size: 1.2em;
    }
    div.no-sibling {
        font-size: 1em;
        padding-top: 20px;
    }
    /* mobile modify menu */
    div.tagname-summary {
        padding-left: 10px;
    }
    div.information {
        margin: 2%;
        margin-top: 0;
        height: 215px;
        overflow-y: auto;
    }
    div.information>textarea {
        font-size: 1.2em;
        border-radius: 0.3em;
        border: none;
        padding: 1.5%;
    }
    div.insert-information-style {
        max-height: 400px;
        height: 400px;
    }
    div.insert-information-style>h1 {
        margin: 0;
    }
}

